--- a/BeerMeUp/WebContent/style.css
+++ b/BeerMeUp/WebContent/style.css
@@ -36,10 +36,10 @@ h1{
 	margin-left: auto;
 	margin-right: auto;
 	text-align:center;
-	widht: 50%;
+	width: 50%;
 	border: 2px solid;
 	border-collapse: collapse;
-	vertical-alignment: center;
+	vertical-align: center;
 	padding: 10px;
 	
 }
@@ -56,10 +56,10 @@ h1{
 	margin-left: auto;
 	margin-right: auto;
 	text-align:center;
-	widht: 50%;
+	width: 50%;
 	border: 2px solid;
 	border-collapse: collapse;
-	vertical-alignment: center;
+	vertical-align: center;
 	padding: 10px;
 	
 }	
