--- a/BeerMeUp/WebContent/BeerMeUpStyle.css
+++ b/BeerMeUp/WebContent/BeerMeUpStyle.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 body{
 	min-height:100vh;
 	display:flex;
@@ -7,7 +6,7 @@ body{
 }
 
 h1{
-	text-align:center
+	text-align:center;
 }
 
 .header ul{
