--- a/BeerMeUp/WebContent/BeerMeUpStyle.css
+++ b/BeerMeUp/WebContent/BeerMeUpStyle.css
@@ -46,6 +46,11 @@ h1{
 	
 }
 
+a.no
+{
+	text-decoration: none;
+}
+
 .cart_table{
 	margin-top: 5%;
 }
@@ -92,3 +97,4 @@ a:active {
   color: blue;
   font-weight: bold;
 }
+
