--- a/BeerMeUp/WebContent/BeerMeUpStyle.css
+++ b/BeerMeUp/WebContent/BeerMeUpStyle.css
@@ -43,7 +43,13 @@ h1{
 	border-collapse: collapse;
 	vertical-align: center;
 	padding: 10px;
-	
+}
+
+.center{
+	width: 25%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 a.no
