--- a/BeerMeUp/WebContent/css/style.css
+++ b/BeerMeUp/WebContent/css/style.css
@@ -150,6 +150,14 @@ footer h1{
 
 /*------------------- ADMIN PAGE --------------------------*/
 
+/*------------------- PROFILE PAGE --------------------------*/
+#profile-page{
+	width: 100%;
+	padding-left:1rem;
+	text-align: center;
+}
+
+/*------------------- PROFILE PAGE --------------------------*/
 
 
 @media (max-width: 990px){
