--- a/BeerMeUp/WebContent/css/style.css
+++ b/BeerMeUp/WebContent/css/style.css
@@ -155,6 +155,36 @@ main form input, textarea, select{
 /*------------------- PROFILE PAGE --------------------------*/
 
 
+/*---------------------ADDRESS PAGE--------------------------*/
+#user-address-page{
+	width:100%;
+	text-align:center;
+	margin-top: 5rem;
+}
+
+#user-address-page table{
+	margin-left:auto;
+	margin-right:auto;
+	border-collapse: collapse;
+}
+
+#user-address-page table th, #user-address-page table td{
+	border: 2px solid black;
+	padding: 1rem 2rem;
+}
+
+
+#user-address-page table th{
+	height: 2rem;
+	font-size: 1.5rem;
+}
+
+#user-address-page table td{
+	height: 1.5rem;
+	font-size: 1rem;
+}
+
+/*---------------------ADDRESS PAGE--------------------------*/
 @media (max-width: 990px){
     html{
         font-size: 90%;
