--- a/BeerMeUp/WebContent/css/style.css
+++ b/BeerMeUp/WebContent/css/style.css
@@ -95,18 +95,80 @@ main form input, textarea, select{
 /*------------------- DETTAGLI PRODOTTO --------------------------*/
 
 /*------------------- LOGIN PAGE --------------------------*/
-#login-page{
-	width: 100%;
-	padding-left:1rem;
+
+#login-page
+{
+	background-size: cover;
+  	height: 100vh;
+  	width: 100%;
+	background-color:white;
+	
 }
 
-#login-page .login-page-form{
-	padding: 2rem 0;
+
+#login-page .login-page-form h2
+{
+    color: #ffda33;
+    text-shadow: 1px 1px 2px black;
 }
 
-#login-page .login-page-form form input{
-	text-transform: none;
+#login-page .login-page-form-container
+{
+	
+ 	display: grid;
+	grid-template-columns: auto auto ;
+	 padding: 3%;
+	 row-gap: 50px;
+	
 }
+
+#login-page .login-page-form-container .login-page-form 
+{
+	width:80%;
+	border:2px solid #ffda33;
+	 border-radius: 20px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
+	background-color:#ffffff;
+}
+
+
+
+#login-page .homer-bender .homer-bender-photo
+    	{
+   	display: block;
+   	max-width: 100%;
+    height: auto;
+    margin-left:auto;
+    margin-right:auto;
+	margin-top:5%;
+	width: 50%;
+	
+
+    	}
+
+@media (max-width: 900px){
+	#login-page .homer-bender .homer-bender-photo
+    	{
+   			width: 70%;
+	}
+}
+@media (max-width: 700px){
+	#login-page .login-page-form#form2{
+	grid-column:1;
+	grid-row:2;
+    	}
+    	#login-page .homer-bender .homer-bender-photo
+    	{
+   			width: 70%;
+	}
+@media (max-width: 420px){
+	#login-page .homer-bender .homer-bender-photo
+    	{
+   			width: 100%;
+   			margin-top:7%;
+	}
 
 /*------------------- LOGIN PAGE --------------------------*/
 
