--- a/BeerMeUp/WebContent/css/prod-page-style.css
+++ b/BeerMeUp/WebContent/css/prod-page-style.css
@@ -74,6 +74,12 @@
     box-shadow: 0 .5rem 1rem black;
 }
 
+#prod-page .prod-page-container .prod-info .info .button a:hover{
+    background-color: #0030ff;
+ 	color: white;
+ 	font-size: 1.3rem;
+}
+
 #prod-page .prod-page-container .bonus-info{
     margin-top: 3rem;
     margin-bottom: 5rem;
