--- a/BeerMeUp/WebContent/css/card.css
+++ b/BeerMeUp/WebContent/css/card.css
@@ -15,14 +15,18 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 5rem;
 }
 
 .card {
-    background-color: #f2f2f2;
-    border-radius: 20px;
-    text-align: center;
-    margin: 2rem 5rem;
-    box-shadow: 0 .5rem 1rem black;
+   	width:80%;
+	border:2px solid;
+	border-radius: 20px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
+	background-color:#ffffff;
+	box-shadow: 3px 5px 5px 0px #adaaaa;
 }
 
 
