--- a/BeerMeUp/WebContent/css/style.css
+++ b/BeerMeUp/WebContent/css/style.css
@@ -35,7 +35,6 @@ main{
 	min-height:100vh;
 	margin-top:5.2rem;
 	flex-direction: column;
-	
 	width:100%;
 }
 
@@ -50,7 +49,13 @@ main .home h1{
 }
 
 main form textarea{
-	border: 1px solid black;
+	box-shadow: 3px 5px 5px 0px #adaaaa;
+	font-size: 1rem;
+	weight: auto;
+	border-radius: 1rem;
+	padding: 0.5rem;
+	margin: 0.5rem;
+	border:2px solid #ffcf00;
 }
 
 
@@ -116,6 +121,7 @@ input[type="reset"]:hover{
 }
 
 table{
+	overflow-x: auto;
 	width:80%;
 	border:2px solid;
 	border-radius: 20px;
@@ -250,9 +256,6 @@ button{
 		margin-left: 0.8rem;
 	}
 
-
-	
-	
 	#login-page .homer-bender .homer-bender-photo
     	{
    			width: 70%;
@@ -481,14 +484,137 @@ button{
 
 /*---------------------USER ORDERS PAGE--------------------------*/
 
+/*---------------------CART PAGE--------------------------*/
+
+#cart-page {
+	width:100%;
+	text-align:center;
+	margin-top: 3rem;
+}
+
+#cart-page h1{
+	margin: 0.6rem;
+}
+
+#cart-page a.buttons{
+	margin: 2rem;
+	text-transform: none;
+ 	color: black;
+ 	background-color:  #ffcf00;
+ 	padding: 1rem 2rem;
+ 	font-size: 1.2rem;
+ 	border-radius: 20px;
+ 	box-shadow: 0 .5rem 1rem black;
+	font-weight: bolder;
+}
+
+
+
+#cart-page a.buttons:hover{
+	background-color: #0030ff;
+ 	color: white;
+ 	font-size: 1.5rem;
+}
+
+#cart-page a.no{
+	box-shadow: 3px 5px 5px 0px #adaaaa;
+	background-color: #ffcf00;
+	height: 1.3rem;
+	border-radius: 2rem;
+	padding:0.4rem;
+	color: black;
+	margin: 0rem 0.4rem;
+}
+
+#cart-page a.no:hover{
+	background-color: #0030ff;
+ 	color: white;
+}
+
+
+#cart-page a.delete{
+	box-shadow: 3px 5px 5px 0px #adaaaa;
+	display: flex;
+	background-color: #ffcf00;
+	border-radius: 2rem;
+	color: black;
+	padding: 0.5rem;
+	justify-content:space-evenly;
+}
+
+
+
+#cart-page a.delete:hover{
+	background-color: #0030ff;
+ 	color: white;
+}
+
+
+/*---------------------CART PAGE--------------------------*/
+
+/*---------------------CHECKOUT PAGE--------------------------*/
+
+#checkout-page {
+	width:100%;
+	text-align:center;
+	margin-top: 3rem;
+}
+
+
+#checkout-page h1{
+	margin: 0.6rem;
+}
+
+
+
+/*---------------------CHECKOUT PAGE--------------------------*/
+
+/*---------------------ADD PRODUCT PAGE--------------------------*/
+
+#admin-page {
+	width:100%;
+	text-align:center;
+	margin-top: 3rem;
+}
+
+#admin-page .admin-page-form {
+	width:80%;
+	border:2px solid;
+	border-radius: 20px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
+	background-color:#ffffff;
+	box-shadow: 3px 5px 5px 0px #adaaaa;
+	margin-bottom: 2rem;
+}
+
+#admin-page h2{
+	margin: 0.6rem;
+}
+
+#admin-page input[type="file"]{
+	box-shadow: 3px 5px 5px 0px #adaaaa;
+	font-size: 1rem;
+	height: auto;
+	border-radius: 2rem;
+	padding: 1rem;
+	margin: 0.5rem;
+	border:2px solid #ffcf00;
+}
+
+/*---------------------ADD PRODUCT PAGE--------------------------*/
+
 @media (max-width: 990px){
     html{
         font-size: 90%;
     }
+	
 }
 
+
 @media (max-width: 600px){
-	input{
+	input, textarea, select{
 		display: grid;
 		margin-left: 0.5rem;
 	}
@@ -507,6 +633,8 @@ button{
 		margin-right: 9rem;
 		margin-left: 0.8rem;
 	}
+	
+	
 }
 
 @media (max-width: 450px){
