--- a/BeerMeUp/WebContent/css/style.css
+++ b/BeerMeUp/WebContent/css/style.css
@@ -56,7 +56,7 @@ main .home h1{
 main form textarea{
 	box-shadow: 3px 5px 5px 0px #adaaaa;
 	font-size: 1rem;
-	weight: auto;
+	width: auto;
 	border-radius: 1rem;
 	padding: 0.5rem;
 	margin: 0.5rem;
